------------------------------------------------------------------------
r1708 | gaser | 2020-09-01 22:31:20

Changed paths:
M       CHANGES.txt
M       cat_surf_render.m

Fixed:   Structure sinfo1 has not only one entry in cat_surf_render.m 
         (Thanks to Ningkai Wang for pointing to that error).
------------------------------------------------------------------------
r1707 | gaser | 2020-09-01 21:56:29 +0200 (Di, 01 Sep 2020) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_io_writenii.m
M       cat_main_roi.m

Fixed:   Catched call to spm_diffeo('pull') for older SPM12 versions.

------------------------------------------------------------------------
r1706 | gaser | 2020-09-01 21:48:12 +0200 (Di, 01 Sep 2020) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_io_writenii.m

Fixed:   Catched call to spm_diffeo('pull') for older SPM12 versions.

------------------------------------------------------------------------
r1705 | gaser | 2020-08-31 22:49:54 +0200 (Mo, 31 Aug 2020) | 36 lines

Changed paths:
M       CAT12-Manual.pdf
M       CHANGES.txt
M       Contents.m
M       Makefile
M       cat_amap.mexa64
M       cat_conf_stools.m
M       cat_conf_tools.m
MM      cat_long_main.m
M       cat_ornlm.mexa64
M       cat_sanlm.mexa64
M       cat_stat_TIV.m
M       cat_update.m
M       cat_vbdist.mexa64
M       cat_vol_downcut.mexa64
M       cat_vol_eidist.mexa64
M       cat_vol_genus0.mexa64
M       cat_vol_gradient3.mexa64
M       cat_vol_interp3f.mexa64
M       cat_vol_laplace3.mexa64
M       cat_vol_laplace3R.mexa64
M       cat_vol_localstat.mexa64
M       cat_vol_median3.mexa64
M       cat_vol_median3c.mexa64
M       cat_vol_pbtp.mexa64
M       cat_vol_simgrow.mexa64
M       html/cat.html
M       html/cat.txt
M       html/cat_starting.html
M       html/cat_versions.html

(1) Fixed:   Recompiled Linux mex-files with Ubuntu 17.10.
(2) Changed: Updated help text.
(3) Changed: Print version information after update if release number was older.